# ReservoirLM

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: quick_start.py  transformer_quick_start.py
reservoir_lm/data_prep/: encoder.py  loader.py  tokenizer.py
reservoir_lm/readout_layer/: layer.py  predictor.py  trainer.py
reservoir_lm/reservoir_core/: activation.py  cell.py  simulator.py
tests/: test_data_prep.py  test_readout_layer.py  test_reservoir_core.py
