[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "reservoir-lm"
version = "0.1.0"
description = "A Python library for implementing Reservoir Language Models based on Reservoir Computing principles."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT License" }
authors = [
    { name = "Jules" },
]
dependencies = [
    "numpy",
    "scipy",
]

[tool.setuptools]
packages = ["reservoir_lm"]
